<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Five Card</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_play">Play</string>
    <string name="button_settings">Settings</string>
    <string name="button_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">Rules</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="host_name">Host Name</string>
    <string name="settings_page">settings page</string>
    <string name="about_page">about page</string>
    <string name="title_activity_play">Five Card</string>
    <string name="hello_world">Hello world!</string>
    <string name="copyright">Copyright © 2015 Nakama Labs, Inc</string>
    <string name="btn_host_game">Host Game</string>
    <string name="btn_join_game">Join Game</string>
    <string name="btn_single_player">Single Player Game</string>
    <string name="title_activity_host">Host a Game</string>
    <string name="waiting_for_players">Waiting for other players to connect ...</string>
    <string name="btn_start">START</string>
    <string name="title_activity_join">Join Game</string>
    <string name="your_name">Your Name</string>
    <string name="available_games">Available Games :</string>
    <string name="btn_join">Join</string>
    <string name="btn_change_name">Change</string>

    <string-array name="available_games">
        <item>Game 1</item>
        <item>Game 2</item>
        <item>Game 3</item>
        <item>Game 4</item>
    </string-array>

    <string name="title_activity_change_name">Change My Name</string>
    <string name="title_activity_game">Five Card</string>
    <string name="game_page">Main Game Activity</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="pick_deck">Pick Deck</string>
    <string name="pick_open">Pick Open</string>
    <string name="title_activity_test">TestActivity</string>

</resources>
